--- a/products.html
+++ b/products.html
@@ -46,7 +46,7 @@
     <div class="swiper-container">
       <div class="swiper-wrapper">
         <div class="swiper-slide">
-          <a href="#"> <img src="img/flashsale.jpg" alt="flashsale" /> </a>
+          <a href="#"> <img src="https://image.freepik.com/free-vector/mega-sale-background-shop-now_23-2148902866.jpg" alt="flashsale" /> </a>
         </div>
         <div class="swiper-slide">
           <a href="#">
@@ -156,6 +156,7 @@
           </div></a
         >
       </div>
+
     </div>
     <div class="returnpolicy">
       <h3>Return Policy</h3>
